# bighelp

./: README.md  pyproject.toml
bighelp/: __init__.py  main.py  ui.py  utils.py
bighelp/app/: __init__.py  actions.py  menu.py
bighelp/tutorials/: __init__.py  basic.py  network.py  system.py
pkgbuild/: PKGBUILD
