[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bighelp"
version = "0.1.0"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
description = "A friendly terminal helper for kids"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
    "textual>=0.30.0",
    "rich>=13.4.2",
]

[project.scripts]
bighelp = "bighelp.main:main"

[tool.setuptools]
packages = ["bighelp"]